<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark_2">

    <TextView
        android:id="@+id/tv_statistic"
        android:text="@string/tv_statistic"
        android:textColor="@color/white"
        android:textSize="12dp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />
    <View
        android:id="@+id/line_statistic"
        android:background="@color/white"
        android:layout_width="100dp"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_statistic" />

    <View
        android:id="@+id/line_graphic"
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginTop="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_statistic" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_graphic">

        <TextView
            android:id="@+id/tv_debt_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_debt_me_hint"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_my_debt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:text="@string/tv_my_debt_hint"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
    <TextView
        android:id="@+id/tv_category"
        android:text="@string/tv_category"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        android:id="@+id/line_category"
        android:background="@color/white"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_my_debt"
            android:text="@string/b_my_debt"
            android:textSize="12dp"
            android:backgroundTint="@color/field_background_dark"
            app:cornerRadius="10dp"
            android:padding="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_debt_me"
            android:text="@string/b_debt_me"
            android:textSize="12dp"
            android:backgroundTint="@color/field_background_dark"
            app:cornerRadius="10dp"
            android:padding="12dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>